--- a/backend/src/config/config.json
+++ b/backend/src/config/config.json
@@ -4,8 +4,7 @@
       "password": "",
       "database": "multinivel_system",
       "host": "127.0.0.1",
-      "dialect": "mysql",
-      "use_env_variable": "DATABASE_URL"
+      "dialect": "mysql"
     },
     "test": {
       "username": "root",
